[fix] list 생성 방식 수정 #136